# reality

./: .gitignore  Cargo.toml  README.md  imgui.conf  owners.txt  readme.md
.cargo/: config.toml
.pipelines/: OneBranch.Official.yml  OneBranch.PullRequest.yml
.pipelines/templates/: build-crates.yml
docs/: feature_flags.md  guide.md  v2_design_ideas.md
docs/v2/: plugin_example.md
hack/azure_vm/: .runmd
hack/portal/: .runmd
intrglctive/: Cargo.toml
intrglctive/examples/: blank_repl.rs  blank_window.rs
intrglctive/src/: desktop.rs  lib.rs  project_loop.rs  show.rs  terminal.rs  update.rs
loopio/: Cargo.toml  README.md
loopio/examples/: utility-demo.md  utility-demo.rs
loopio/src/: action.rs  address.rs  background_work.rs  deck.rs  engine.rs  errors.rs  foreground.rs  host.rs  lib.rs  loop_type.rs  operation.rs  plugin.rs  prelude.rs  sequence.rs  spawned.rs  work.rs
loopio/src/ext/: filter_ext.rs  flexbuffers_ext.rs  hyper_ext.rs  mod.rs  poem_ext.rs  std_ext.rs  wire_ext.rs
nebudeck/: Cargo.toml  README.md
nebudeck/examples/: blank_repl.rs  blank_window.rs  request_repl.rs  wgpu_imgui_demo_window.rs
nebudeck/lib/runmd/: commands.md  nbd.md
nebudeck/src/: controller.rs  deck.rs  desktop.rs  exec.rs  layout.rs  lib.rs  nebudeck.rs  project.rs  project_loop.rs  server.rs  terminal.rs
nebudeck/src/ext/: imgui_ext.rs  mod.rs  terminal_ext.rs  wgpu_ext.rs
nebudeck/src/ext/aux_node/: mod.rs  parser_data.rs
nebudeck/src/widgets/: button.rs  frame_editor.rs  imgui_frame_editor.rs  input.rs  mod.rs  servers.rs
reality/: Cargo.toml  README.md
reality/examples/: plugin_framework.rs  thunk_trait.rs
reality/examples/plugin/: main.rs  plugin.rs  println.rs
reality/src/: attribute.rs  block.rs  compile.rs  compiler.rs  error.rs  identifier.rs  lib.rs  metadata.rs  parser.rs  prelude.rs  v2.rs  value.rs  world_dir.rs
reality/src/attribute/: v2.rs
reality/src/attribute/v2/: action.rs  attribute.rs  block.rs  block_builder.rs  block_list.rs  compiled.rs  compiler.rs  error.rs  extension_table.rs  identifier.rs  parser.rs  platform.rs  root.rs  tag.rs  toml_transpiler.rs  value_index.rs  value_provider.rs
reality/src/attribute/v2/action/: build.rs  build_root.rs  build_toml.rs  edit_toml.rs  expand.rs  extend.rs
reality/src/attribute/v2/parser/: interop.rs  world_builder.rs
reality/src/attributes/: attribute.rs  attribute_type.rs  container.rs  custom.rs  decorated.rs  decoration.rs  eval.rs  fields.rs  mod.rs  parser.rs  storage_target.rs  tag.rs  visit.rs
reality/src/attributes/storage_target/: async_dispatcher.rs  complex.rs  fs.rs  mod.rs  resource_key.rs  resource_storage_config.rs  shared.rs  simple.rs  specs.rs  target.rs
reality/src/block/: block_index.rs  block_object.rs  block_properties.rs  wire.rs
reality/src/block/block_properties/: block_property.rs  documentation.rs
reality/src/compile/: extension.rs  root.rs
reality/src/compiler/: extension.rs  extension_parser.rs  root.rs
reality/src/macros/: borrow.rs  cfg.rs  eval_impl.rs  mod.rs  object.rs  resource.rs  task.rs
reality/src/parser/: attributes.rs  elements.rs  keywords.rs
reality/src/parser/attributes/: blob.rs  custom.rs  parser.rs  property.rs
reality/src/project/: extension.rs  extension_controller.rs  host.rs  mod.rs  node.rs  package.rs  program.rs  source.rs  workspace.rs
reality/src/state/: load.rs  loader.rs  mod.rs  provider.rs
reality/src/store/: index.rs  key.rs  streamer.rs
reality/src/thunk/: cache_ext.rs  call_async.rs  context.rs  kvp_ext.rs  mod.rs  plugin.rs
reality/src/v2/: action.rs  attribute.rs  block.rs  block_list.rs  bootstrap.rs  call.rs  command.rs  compiler.rs  documentation.rs  framework.rs  interner.rs  links.rs  parser.rs  prelude.rs  properties.rs  root.rs  thunk.rs  using.rs  visitor.rs  visitor_mut.rs
reality/src/v2/compiler/: build_log.rs  build_ref.rs  compiled.rs  dispatch_ref.rs  linker.rs
reality/src/v2/data/: blob.rs  mod.rs  query.rs  toml.rs
reality/src/v2/framework/: config.rs
reality/src/v2/parser/: interop.rs  world_builder.rs
reality/src/v2/properties/: property.rs
reality/src/v2/thunk/: build.rs  call.rs  compile.rs  config.rs  dispatch.rs  listen.rs  map.rs  select.rs  thunk_table.rs  update.rs
reality/src/wire/: block_client.rs  block_transport.rs  content_broker.rs  control_device.rs  data.rs  encoder.rs  frame.rs  interner.rs  mod.rs  op.rs  packet.rs  protocol.rs  routes.rs  server.rs
reality/src/wire/block_client/: block_entry.rs
reality/src/wire/content_broker/: digest.rs
reality/src/wire/control_device/: control_buffer.rs
reality/src/wire/frame/: extension_token.rs
reality/src/wire/protocol/: async_ext.rs
reality_atelier/: Cargo.toml
reality_atelier/src/: lib.rs  menu.rs
reality_azure/: Cargo.toml
reality_azure/src/: block_client.rs  block_store.rs  lib.rs  store.rs
reality_derive/: Cargo.toml
reality_derive/src/: apply_framework.rs  enum_data.rs  impl_data.rs  lib.rs  struct_data.rs  struct_field.rs  thunk.rs
reality_tar/: Cargo.toml
reality_tar/src/: block_client.rs  block_transport.rs  filesystem.rs  lib.rs
runir/: Cargo.toml  README.md
runir/src/: crc.rs  entity.rs  entropy.rs  field.rs  interner.rs  level.rs  lib.rs  linker.rs  recv.rs  repr.rs  tag.rs  util.rs
runir/src/repr/: dependency.rs  factory.rs  field.rs  host.rs  mod.rs  node.rs  recv.rs  resource.rs
runmd/: Cargo.toml  LICENSE  README.md
runmd/src/: lib.rs
runmd/src/block/: info.rs  mod.rs  provider.rs
runmd/src/extension/: loader.rs
runmd/src/lex/: attribute.rs  block.rs  context.rs  extension.rs  input.rs  instruction.rs  line.rs  mod.rs  prop.rs  tag.rs  tokens.rs
runmd/src/node/: info.rs  mod.rs  provider.rs
runmd/src/parse/: mod.rs  parser.rs
runmd/tests/: test_parser.rs
src/: attribute.rs  block.rs  evaluate.rs  interpreter.rs  lib.rs  parser.rs  world_dir.rs
src/block/: block_index.rs  block_object.rs  wire.rs  (+1 more)
tools/: package.sh  run-pr-checks.sh  run-tests.sh
univerux/: Cargo.toml
univerux/examples/: blank_repl.rs  blank_window.rs
univerux/src/: lib.rs
(+51 files in other folders)
