[package]
name = "reality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlier = { git = "https://github.com/juliusl/atlier.git", branch="pr/v1" }
base64 = "0.13.0"
bytemuck = "1.12.1"
logos = "0.12.1"
rand = "0.8.5"
serde = "1.0.144"
sha2 = "0.10.2"
specs = { version = "0.18.0", features = ["default", "derive", "shred-derive"] }
tokio = { version = "1.19.2", features = ["default", "rt-multi-thread", "sync", "fs", "process", "io-util", "io-std", "macros"] }
tracing = "0.1.36"
tracing-test = "0.2.3"
