[package]
name = "nebudeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = ["desktop", "desktop-wgpu", "desktop-softbuffer", "desktop-imgui", "terminal"]
desktop = [ "winit" ]
desktop-wgpu = [ "wgpu" ]
desktop-softbuffer = [ "softbuffer" ]
desktop-imgui = [ "desktop", "desktop-wgpu", "imgui-wgpu", "imgui-winit-support" ]
terminal = [ "clap", "shlex" ]

[dependencies]
loopio = { path = "../loopio" }
anyhow = "1.0.75"
tokio = "1.33.0"
tracing = "0.1.40"

# Desktop dependencies
wgpu = { version = "0.18.0", optional = true }
winit = { version = "0.29.2", optional = true, features = ["wayland", "rwh_05" ]}
imgui = { version = "0.11.0", optional = true }
imgui-wgpu = { version = "0.24.0", optional = true }
imgui-winit-support = { version = "0.11.0", optional = true }
softbuffer = { version = "0.3.2", optional = true }

# Terminal dependencies
clap ={ version = "4.4.6", features = [ "help", "derive" ], optional = true }
shlex = { version = "1.2.0", optional = true }
async-trait = "0.1.74"

[dev-dependencies]
tracing-test = "0.2.4"

[[example]]
name = "blank_window"
required-features = [ "desktop", "desktop-softbuffer" ]

[[example]]
name = "blank_repl"
required-features = [ "terminal" ]
