[package]
name = "nebudeck"
description = "Comprehensive suite of tools for building applications using reality and loopio semantics."
authors = ["juliusl@microsoft.com"]
version = "0.1.0-devel"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = ["desktop", "desktop-softbuffer", "desktop-imgui"]
desktop = [ ]
desktop-vnext = ["winit_29", "wgpu_18"]
desktop-softbuffer = [ "softbuffer" ]
desktop-imgui = [ "wgpu_17", "winit_27", "desktop", "imgui", "imgui-wgpu", "imgui-winit-support" ]

[dependencies]
loopio = { version = "0.1.0-devel", path = "../loopio", features = ["full"] }
anyhow = "1.0.75"
tokio = "1.33.0"
tracing = "0.1.40"

# Desktop dependencies
wgpu_17 = { package = "wgpu", version = "0.17.0", optional = true }
wgpu_18 = { package = "wgpu", version = "0.18.0", optional = true }
winit_29 = { package = "winit", version = "0.29.2", optional = true, features = ["wayland", "rwh_05" ]}
winit_27 = { package = "winit", version = "0.27.5", optional = true }
imgui = { version = "0.11.0", optional = true, features = ["tables-api"]}
imgui-wgpu = { version = "0.24.0", optional = true }
imgui-winit-support = { version = "0.11.0", optional = true }
softbuffer = { version = "0.3.2", optional = true }

# Terminal dependencies
clap ={ version = "4.4.6", features = [ "help", "derive", "string", "env" ] }
shlex = { version = "1.2.0" }
async-trait = "0.1.74"
paste = "1.0.14"
futures = "0.3.29"
bincode = "1.3.3"
tokio-util = "0.7.10"
serde = "1.0.193"
toml = "0.8.8"
base64 = "0.21.5"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tracing-test = "0.2.4"

[[example]]
name = "blank_window"
required-features = [ "desktop", "desktop-softbuffer" ]

[[example]]
name = "blank_repl"

[[example]]
name = "wgpu_imgui_demo_window"
required-features = [ "desktop-imgui" ]

[[bin]]
name = "cargo-nbd"
required-features = [ "full" ]