[package]
name = "reality"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "specs_storage_target", "async_dispatcher", "derive" ]
derive = ["reality_derive"]
async_dispatcher = [ "tokio" ]
specs_storage_target = [ "specs" ]

[dependencies]
base64 = "0.13.0"
bytes = "1.2.1"
bytemuck = "1.12.1"
tracing = "0.1.36"
tracing-test = "0.2.3"
serde = { version = "1.0.144", features = ["derive"] }
runmd = { path = "../runmd" }
uuid = "1.4.1"
bitflags = "2.4.0"

[dependencies.reality_derive]
path = "../reality_derive"
optional = true

# Feature: async_dispatcher
[dependencies.tokio]
version = "1.19.2"
features = ["default", "rt-multi-thread", "sync", "fs", "process", "io-util", "io-std", "macros"]
optional = true

# Feature: specs_storage_target
[dependencies.specs]
version = "0.20.0"
features = ["default", "derive", "shred-derive"]
optional = true
