[package]
name = "reality"
description = "Framework for resource management for code operating in a `call by name` context."
authors = ["juliusl@microsoft.com"]
version = "0.2.0-alpha"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "async_dispatcher", "derive" ]
derive = ["reality_derive"]
async_dispatcher = [ "tokio" ]
specs_storage_target = [ "specs" ]

[dependencies]
base64 = "0.13.0"
bytes = "1.2.1"
bytemuck = "1.12.1"
tracing = "0.1.36"
tracing-test = "0.2.3"
serde = { version = "1.0.144", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
bitflags = "2.4.0"
futures-util = "0.3.28"
anyhow = "1.0.75"
async-stream = "0.3.5"
once_cell = "1.18.0"
async-trait = "0.1.74"
tokio-util = "0.7.10"
bincode = "1.3.3"
clap = { version = "4.4.13", features = ["string"] }

[dependencies.runmd]
version = "0.1.0-pre"
path = "../runmd"
registry = "acr-crates"

[dependencies.runir]
version = "0.1.0-pre"
path = "../runir"
registry = "acr-crates"

[dependencies.reality_derive]
version = "0.1.0-pre"
path = "../reality_derive"
registry = "acr-crates"
optional = true

# Feature: async_dispatcher
[dependencies.tokio]
version = "1.19.2"
features = ["default", "rt-multi-thread", "sync", "fs", "time", "process", "io-util", "io-std", "macros"]
optional = true

# Feature: specs_storage_target
[dependencies.specs]
version = "0.20.0"
features = ["default", "derive", "shred-derive"]
optional = true
