[package]
name = "reality_atelier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
desktop = [ "imgui", "imgui-wgpu" ]
repl = [ "clap" ]

[dependencies]
reality = { path = "../reality" }
anyhow = "1.0.75"

# REPL dependencies
clap ={ version = "4.4.6", features = [ "help" ], optional = true }

# Desktop dependencies
imgui = { version = "0.11.0", optional = true }
imgui-wgpu = { version = "0.24.0", optional = true }
