[package]
name = "reality_tar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reality = { path = "../reality" }
bytes = "1.2.1"
tokio = { version = "1.20.1", features = ["default", "rt-multi-thread", "sync", "fs", "process", "io-util", "io-std", "macros"] }
futures-lite = "1.12.0"
futures = "0.3.25"
tracing = "0.1.37"
tokio-tar = "0.3.0"
tokio-stream = "0.1.11"
async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
base64 = "0.13.1"
tracing-test = "0.2.3"

