[package]
name = "runir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crc-interner"]
crc-interner = ["crc"]

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
bytemuck = "1.14.0"
crc = { version = "3.0.1", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
uuid = "1.6.1"
