[package]
name = "runmd"
description = "Framework and parser for runmd format."
authors = ["juliusl@microsoft.com"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
logos = "0.13.0"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["test-util", "macros"] }
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
